--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MIKMIDI"]
 	path = MIKMIDI
 	url = https://github.com/mixedinkey-opensource/MIKMIDI.git
+[submodule "MusicKit"]
+	path = MusicKit
+	url = https://github.com/benzguo/MusicKit
